--- a/Develop/layouts/main.handlebars
+++ b/Develop/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Placeholder</title>
+  <title>MVC Tech Blog</title>
   <link rel="stylesheet" type="text/css" href="/css/jass.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1>Welcome to the Placeholder</h1>
+    <h1>Welcome to the MVC Tech Blog</h1>
   </header>
   <nav>
     <a href="/">Home</a>
@@ -24,7 +24,7 @@
   </nav>
   <main>
     <aside>
-      <h2>Enjoy the placeholders!</h2>
+      <h2>Enjoy the Blog!</h2>
     </aside>
     <div class="gallery">
       {{{body}}}
